# OperatorGame

./: .env.example  .gitignore  AGENT_CONTRACT.md  AndroidManifest.xml  CONSTITUTION.md  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  LICENSE  PLAN.md  README.md  SPEC.md  TESTING.md  Trunk.toml  build_aab.ps1  build_android.ps1  build_android.sh  capture_screenshots.ps1  check_moto.ps1  check_ndk_config.ps1  deploy_moto.ps1  diagnose_apk.ps1  find_ui_coordinates.ps1  index.html  map_ui.ps1  run_android_tests.ps1  run_desktop.ps1  run_mobile.ps1  save.json  screenshot.ps1  setup_local_forge.ps1  slimegarden_prd.html  test_output.txt  test_save.json
.cargo/: config.toml
.github/workflows/: android.yml  release.yml
assets/GDD/: COMMAND_GLOSSARY.md
assets/soundscape/: planetary-song.md
docs/: ARCHITECTURE.md  BARTER_WEB_TRADE_SYSTEM.md  CHROMATIC_FRAMEWORK.md  CLICK_TO_ACTION_LOOP_MECHANICS.md  COLOR_MIXING_LOGIC.md  COMPLETED_G5_SUMMARY.md  COUNTER_STRATEGY_MATRIX.md  DESIGN_BLUEPRINT.md  ELDER_LIVING_INTERFACE.md  GAME_DESIGN.md  GDD.md  HARMONIC_RESONANCE_GEOMETRIC_ARCHETYPES.md  INDEX.md  MAFIA_WARS_STRATEGY_INTEGRATION.md  MAFIA_WARS_TACTICAL_INTERACTION.md  MOBILE_EMU_CHEATSHEET.md  MOBILE_EMU_INDEX.md  MOBILE_EMU_PLAN.md  MOBILE_EMU_REFERENCE.md  MOBILE_EMU_SUMMARY.md  MOBILE_EMU_VERIFICATION.md  NEXT_SPRINTS.md  OPERATOR_LIFECYCLE_SDD.md  OperatorGame_Android_Viewport_Directive.md  OperatorGame_Automated_Screenshot_Analysis_Directive.md  OperatorGame_Automation_Formalization_Directive.md  OperatorGame_Build_Deploy_Automation_Directive.md  OperatorGame_Crash_Diagnosis_Testing_Suite_Directive.md  OperatorGame_G2_MapGated_Progression_Directive.md  OperatorGame_G3_Equipment_Directive.md  OperatorGame_Git_Security_Audit_Directive.md  OperatorGame_Public_Release_Prep_Directive.md  OperatorGame_Sub_Tab_Scaffold_Phase_C.md  PUBLIC_PRESENCE_AUDIT.md  README.md  REFACTORING_NOTES.md  REMOTE_IN_LIVE_FEED.md  RENDERED_MATH_VISUAL_IDENTITY.md  ROADMAP.md  SCRAP_TECH_TREE.md  (+14 more)
docs/DESIGN_INSPIRATION/: BEASTIE_BAY_DX_NOTES.md  EXPLORATION_TRACK_PROPOSAL.md  SLIME_GARDEN_DUNGEON_TRACKS.md
docs/SPRINTS_COMPLETED/: G1_ROSTER_MANAGEMENT.md  G2_MISSION_CONTRACTS.md  G3_EQUIPMENT_HATS.md  G4_COMBAT_LOGS.md  G5_GAUNTLET_MISSIONS.md  SPRINT-1-GENETICS.md  SPRINT-2-COMBAT.md  SPRINT-3-EXPEDITION.md
docs/adr/: ADR-002-timestamp-over-countdown.md  ADR-005-culture-hex-wheel.md  ADR-006-d20-combat.md  ADR-010-incubator-protocol.md  ADR-013-tech-tree.md  ADR-020-shepherds-hand-interaction.md  ADR-021-zero-latency-interface.md  ADR-023-trinary-balance-v2.md  ADR-026-cultural-permeability-logic.md  ADR-030-responsive-layout.md  ADR-031-static-mission-pool.md  ADR-032-orphan-protection.md  ADR-033-dc-formula-derivation.md  ADR-034-resource-economy-taxonomy.md  ADR-035-hat-inventory-model.md  ADR-036-static-node-id-assignments.md  ADR-037-three-operator-squad-cap.md  ADR-038_modular_data_layer.md  ADR-039-roster-card-header-layout.md  ADR-040-flutter-migration-deferred.md  ADR-041-flutter-migration-strategy.md  ADR-043-bridge-integration-strategy.md  ADR-044-flutter-ui-parity.md
docs/design/: DESIGN_BLUEPRINT.md  OPENAGENT_ANALYSIS_REPORT.md  OPENAGENT_ARCHITECTURAL_MANIFESTO.md  OperatorGame_UI_Layout_Audit_Directive.md  PHASE_F2_SUMMARY_FOR_DESIGNER.md  PLANETARY_MAP_LAYOUT.md  UI_COMPONENT_INVENTORY.md
docs/interop/: REPOSITORY_GUIDE.md
docs/sdd/: DIFFICULTY_BALANCE_SDD.md  PLAN.md  SDD-037_Gauntlet_Missions.md  SDD-042-flutter-card-contract.md  SDD-043_Equipment_CombatLogs.md  SDD-050-war-room-dashboard.md  SDD038_UI_Architecture.md  SDD038_addendum_egui_constraints.md
docs/sprints/: AUDIT_REPORT_F1b.md  AUDIT_REPORT_MapProgression.md  AUDIT_REPORT_Reconciliation.md  AUDIT_REPORT_SpecAlignment.md  LIVING_ECONOMY_SUB_FACTIONS.md  OperatorGame_Android_Viewport_Phase_B.md  OperatorGame_Desktop_Binary_Phase_D.md  OperatorGame_G6_Leveling_Feel_Directive.md  OperatorGame_Screenshot_Capture_Directive.md  OperatorGame_Unified_Android_Tools_Architecture_Directive.md  PLANETARY_TOPOLOGY_RIPPLE_MAP.md  PUBLIC_PRESENCE_AUDIT.md  SlimeGarden_Core_Loop_Phase_E.md  Sprint_02_Dice_Drama.md
docs/src/: SUMMARY.md
docs/state/: current.md
docs/systems/: MAFIA_WARS_UI_STRATEGY.md  (+1 more)
examples/: cli.rs
lib/: device_registry.ps1  logcat_monitor.ps1
operator-cli/: Cargo.toml
operator-cli/docs/: ELDER_CONSULTATION_UI.md  README.md  TACTICAL_WIRING_SPRINT.md  TRINARY_RPS_LOOKUP_TABLE.md  TRINITY_BONUS_MECHANICS.md  book.toml
operator-cli/docs/adr/: ADR-001-rust-stack.md  ADR-003-atomic-save.md  ADR-004-success-formula.md  ADR-014-shepherds-utility.md  ADR-022-9-point-chromatic-matrix.md  ADR-023-trinary-balance-protocol.md  ADR-025-elder-centric-graph.md
operator-cli/docs/roadmap/: SPRINT-2-COMBAT.md
operator-cli/docs/src/: README.md  SUMMARY.md
operator-cli/docs/src/GDD/: CULTURES.md  NARRATIVE.md  VISION.md
operator-cli/docs/src/SDD/: PERSISTENCE.md  PLAN.md  WORLD_MAP.md
operator-cli/docs/src/narrative/: astronaut-and-elder.md
operator-cli/docs/src/technical/: terminal-specs.md
operator-cli/src/: main.rs
scripts/: analyze_screenshot_vision.py  analyze_screenshots.ps1  annotate_ui_elements.ps1  auto_analyze_screenshots.py  capture_ui_tree.ps1  establish_baseline.ps1  generate_ui_report.ps1  monitor_logcat.ps1  ui_iteration_loop.ps1
src/: audio.rs  cli.rs  combat.rs  dice.rs  dungeon.rs  garden.rs  genetics.rs  geometry.rs  inventory.rs  lib.rs  log_engine.rs  main.rs  models.rs  persistence.rs  platform.rs  racing.rs  recruitment.rs  ui.rs  world_map.rs
tests/: f1b_loop.rs  g1_stability.rs  g2_progression.rs  g3_equipment.rs  g6_leveling.rs  geometry_integration.rs  ui_layout.rs  ui_structure.rs
(+59 files in other folders)
