[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["operator-cli"]

[package.metadata.android]
package_name = "com.robertdugger.operator"
label = "OPERATOR"
assets = "docs/src"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33

[package.metadata.android.signing.release]
path = "/redacted/path"
keystore_password = "REDACTED"
key_alias = "androiddebugkey"
key_password = "REDACTED"

[dependencies]
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1",   features = ["v4", "serde"] }
rand        = { version = "0.8", features = ["small_rng"] }
clap        = { version = "4",   features = ["derive"] }
tokio       = { version = "1",   features = ["full"] }
eframe      = { version = "0.27", features = ["persistence"] }
include_dir = "0.7.4"
winit = { version = "0.29", features = ["android-native-activity"] }
rodio = "0.19"
lazy_static = "1.4"

[lib]
name = "operator"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_os = "android")'.dependencies]
winit = "0.29"
android-activity = { version = "0.5", features = ["native-activity"] }
ndk-context = "0.1"

[dev-dependencies]
