[package]
name = "operator"
version = "0.1.0"
authors = ["Operator Team"]
edition = "2021"

[workspace]
members = ["operator-cli"]

[lib]
name = "operator"
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.27.2", features = ["android-native-activity"] }
egui = "0.27.2"
winit = { version = "0.29", features = ["android-native-activity"] }
android-activity = { version = "0.5", features = ["native-activity"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
rodio = { version = "0.17", default-features = false, features = ["cpal"] }
lazy_static = "1.4"
cpal = "0.15"

[dev-dependencies]
criterion = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.android]
package = "rust.operator"
label = "OPERATOR"
assets = "assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
target_sdk_version = 33

[package.metadata.android.signing.release]
path = "/redacted/path"
keystore_password = "REDACTED"
key_alias = "androiddebugkey"
key_password = "REDACTED"
