[package]
name = "operator"
version = "0.1.10"
authors = ["Operator Team"]
edition = "2021"

[workspace]
members = ["operator-cli"]

[lib]
name = "operator"
crate-type = ["cdylib"]

# ---------------------------------------------------------------------------
# Shared dependencies — available on all platforms
# ---------------------------------------------------------------------------
[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1.0", features = ["v4", "serde", "js"] }
rand        = { version = "0.8", features = ["small_rng"] }
clap        = { version = "4",   features = ["derive"] }
lazy_static = "1.4"

# ---------------------------------------------------------------------------
# Host (non-Android) — eframe with default desktop features
# ---------------------------------------------------------------------------
[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.27.2" }
egui   = "0.27.2"
winit  = { version = "0.29" }

# ---------------------------------------------------------------------------
# Android — eframe + winit + android-activity with native-activity feature.
# ndk-sys is a transitive dep that only compiles for Android; keeping these
# under cfg(target_os = "android") ensures it is never pulled in on the host.
# ---------------------------------------------------------------------------
[target.'cfg(target_os = "android")'.dependencies]
eframe           = { version = "0.27.2", features = ["android-native-activity"] }
egui             = "0.27.2"
winit            = { version = "0.29", features = ["android-native-activity"] }
android-activity = { version = "0.5",  features = ["native-activity"] }

[dev-dependencies]
criterion = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[package.metadata.android]
package        = "com.rfditservices.operatorgame"
apk_name       = "operatorgame"
label          = "OperatorGame"
manifest_path  = "AndroidManifest.xml"
min_sdk_version = 26
target_sdk_version = 35
stl            = "c++_shared"
assets         = "assets"
build_targets  = ["aarch64-linux-android", "armv7-linux-androideabi"]
[package.metadata.android.signing.release]
path              = "/redacted/path"
keystore_password = "REDACTED"
key_alias         = "androiddebugkey"
key_password = "REDACTED"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
